--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandela\""
+    "email = \"art.vandelay@vandelay.com\""
    ]
   },
   {
