Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,23 +639,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Liz Kaplan'"
+       "42"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name "
+    "name = 42\n",
+    "name"
    ]
   },
   {
