Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,23 +639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "'Liz Kaplan'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name.upper\n",
+    "name.upper()\n",
     "name"
    ]
   },
