--- a/index.ipynb
+++ b/index.ipynb
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -648,15 +648,16 @@
        "'Liz Kaplan'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name.upper()\n",
-    "name"
+    "\n",
+    "na\n",
+    "name.title()"
    ]
   },
   {
